--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -24,5 +24,5 @@ jobs:
         python -m pip install --upgrade pip
     - name: Run setup.py and build html
       run: |
-        python setup.py
+        python setup.py develop
         python piatto.py docs/menu.csv docs/index.html 
