--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -25,4 +25,22 @@ jobs:
     - name: Run setup.py and build html
       run: |
         python setup.py develop
-        python piatto.py docs/menu.csv docs/index.html 
+        python piatto.py docs/menu.csv docs/index.html
+    - name: Run setup.py and build html
+      run: |
+        python setup.py develop
+        python piatto.py docs/menu.csv docs/index.html
+    - name: Checkout Pages branch
+      uses: actions/checkout@v2
+      with:
+        repository: gogl92/SaboresDeAsia
+        path: pages
+    - name: Copy the files to the pages branch
+      run: |
+        \cp docs/index.html pages/index.html
+        \cp docs/index.csv pages/index.csv
+    - name: Git Commit and Push
+      uses: github-actions-x/commit@v2.6
+      with:
+        github-token: $\{{ secrets.GITHUB_TOKEN }}
+        commit-message: "Updating pages 🌏"
