--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -39,8 +39,17 @@ jobs:
       run: |
         \cp docs/index.html pages/index.html
         \cp docs/menu.csv pages/menu.csv
-    - name: Git Commit and Push
-      uses: github-actions-x/commit@v2.6
+        - name: checkout
+    - uses: actions/checkout@master
       with:
-        github-token: $\{{ secrets.GITHUB_TOKEN }}
-        commit-message: "Updating pages 🌏"
+        ref: pages
+    - name: build
+      uses: github-actions-x/hugo@master
+    - name: push
+      uses: github-actions-x/commit@v2.7
+      with:
+        github-token: ${{ secrets.GITHUB_TOKEN }}
+        push-branch: 'pages'
+        commit-message: 'Updating pages 🌏'
+        force-add: 'true'
+        files: pages/index.html pages/menu.csv
