--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -40,7 +40,7 @@ jobs:
         \cp docs/index.html pages/index.html
         \cp docs/menu.csv pages/menu.csv
     - name: checkout
-    - uses: actions/checkout@master
+      uses: actions/checkout@master
       with:
         ref: pages
     - name: build
